<h1 id='b41a828c58'>История изменений</h1><h3 id='09-11-2020'>09.11.2020</h3>
<ul>
<li>параметры iss, sub, iat в запросе JWT больше не требуются</li>
<li>запрос /gateway_types теперь требует авторизации</li>
<li>добавлены запросы /depositcodes/create и /depositcodes/redeem для работы с кодами Garantex </li>
</ul>
<h3 id='10-05-2020'>10.05.2020</h3>
<ul>
<li>первая публичная версия API </li>
</ul>