@@ -1,4 +1,8 @@
-<h1 id='b41a828c58'>История изменений</h1><h3 id='09-11-2020'>09.11.2020</h3>
+<h1 id='b41a828c58'>История изменений</h1><h3 id='14-11-2020'>14.11.2020</h3>
+<ul>
+<li>получение дополнительных депозит адресов: POST /deposit_address, GET /deposit_address/details</li>
+</ul>
+<h3 id='09-11-2020'>09.11.2020</h3>
 <ul>
 <li>параметры iss, sub, iat в запросе JWT больше не требуются</li>
 <li>запрос /gateway_types теперь требует авторизации</li>
